Added a new Script.js that is modified to ES6 version of Javascript and Linked the HTML to this js file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 	<!-- My Javascript -->
-	<script type="text/javascript" src="assets/script.js"></script>
+	<script type="text/javascript" src="assets/ES6script.js"></script>
 
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
